Vendor dependecies and goa generated code
