# gen/http/openapi.yaml
@@ -352,6 +352,176 @@ paths:
                         format: binary
             schemes:
                 - http
+    /policy/{repository}/{group}/{policyName}/{version}/validation:
+        get:
+            tags:
+                - policy
+            summary: Validate policy
+            description: Validate executes a policy with the given 'data' as input and validates the output schema.
+            operationId: policy#Validate#1
+            parameters:
+                - name: repository
+                  in: path
+                  description: Policy repository.
+                  required: true
+                  type: string
+                - name: group
+                  in: path
+                  description: Policy group.
+                  required: true
+                  type: string
+                - name: policyName
+                  in: path
+                  description: Policy name.
+                  required: true
+                  type: string
+                - name: version
+                  in: path
+                  description: Policy version.
+                  required: true
+                  type: string
+                - name: x-evaluation-id
+                  in: header
+                  description: EvaluationID allows overwriting the randomly generated evaluationID
+                  required: false
+                  type: string
+                - name: x-cache-ttl
+                  in: header
+                  description: Policy result cache TTL in seconds
+                  required: false
+                  type: integer
+                - name: any
+                  in: body
+                  description: Input data passed to the policy execution runtime.
+                  required: true
+                  schema:
+                    type: string
+                    format: binary
+            responses:
+                "200":
+                    description: OK response.
+                    schema:
+                        type: string
+                        format: binary
+                    headers:
+                        ETag:
+                            description: ETag contains unique identifier of the policy evaluation and can be used to later retrieve the results from Cache.
+                            type: string
+            schemes:
+                - http
+        post:
+            tags:
+                - policy
+            summary: Validate policy
+            description: Validate executes a policy with the given 'data' as input and validates the output schema.
+            operationId: policy#Validate#2
+            parameters:
+                - name: repository
+                  in: path
+                  description: Policy repository.
+                  required: true
+                  type: string
+                - name: group
+                  in: path
+                  description: Policy group.
+                  required: true
+                  type: string
+                - name: policyName
+                  in: path
+                  description: Policy name.
+                  required: true
+                  type: string
+                - name: version
+                  in: path
+                  description: Policy version.
+                  required: true
+                  type: string
+                - name: x-evaluation-id
+                  in: header
+                  description: EvaluationID allows overwriting the randomly generated evaluationID
+                  required: false
+                  type: string
+                - name: x-cache-ttl
+                  in: header
+                  description: Policy result cache TTL in seconds
+                  required: false
+                  type: integer
+                - name: any
+                  in: body
+                  description: Input data passed to the policy execution runtime.
+                  required: true
+                  schema:
+                    type: string
+                    format: binary
+            responses:
+                "200":
+                    description: OK response.
+                    schema:
+                        type: string
+                        format: binary
+                    headers:
+                        ETag:
+                            description: ETag contains unique identifier of the policy evaluation and can be used to later retrieve the results from Cache.
+                            type: string
+            schemes:
+                - http
+    /policy/{repository}/{group}/{policyName}/{version}/validation/did.json:
+        get:
+            tags:
+                - policy
+            summary: Validate policy
+            description: Validate executes a policy with the given 'data' as input and validates the output schema.
+            operationId: policy#Validate
+            parameters:
+                - name: repository
+                  in: path
+                  description: Policy repository.
+                  required: true
+                  type: string
+                - name: group
+                  in: path
+                  description: Policy group.
+                  required: true
+                  type: string
+                - name: policyName
+                  in: path
+                  description: Policy name.
+                  required: true
+                  type: string
+                - name: version
+                  in: path
+                  description: Policy version.
+                  required: true
+                  type: string
+                - name: x-evaluation-id
+                  in: header
+                  description: EvaluationID allows overwriting the randomly generated evaluationID
+                  required: false
+                  type: string
+                - name: x-cache-ttl
+                  in: header
+                  description: Policy result cache TTL in seconds
+                  required: false
+                  type: integer
+                - name: any
+                  in: body
+                  description: Input data passed to the policy execution runtime.
+                  required: true
+                  schema:
+                    type: string
+                    format: binary
+            responses:
+                "200":
+                    description: OK response.
+                    schema:
+                        type: string
+                        format: binary
+                    headers:
+                        ETag:
+                            description: ETag contains unique identifier of the policy evaluation and can be used to later retrieve the results from Cache.
+                            type: string
+            schemes:
+                - http
     /readiness:
         get:
             tags:
@@ -414,19 +584,19 @@ definitions:
             service:
                 type: string
                 description: Service name.
-                example: Cupiditate sed omnis dolorem accusamus dolores non.
+                example: Esse ut.
             status:
                 type: string
                 description: Status message.
-                example: Est magni quia earum quis odit.
+                example: Repudiandae delectus facere.
             version:
                 type: string
                 description: Service runtime version.
-                example: Saepe nemo delectus sit saepe.
+                example: Temporibus commodi.
         example:
-            service: Mollitia molestiae tempora deserunt blanditiis.
-            status: Quasi aut ut unde.
-            version: Velit esse ut.
+            service: Repellendus reiciendis molestias.
+            status: Dolore nostrum animi omnis qui nihil.
+            version: Quibusdam rem voluptatum dolor provident dolorum nihil.
         required:
             - service
             - status
@@ -438,19 +608,19 @@ definitions:
             service:
                 type: string
                 description: Service name.
-                example: Repudiandae delectus facere.
+                example: Eius culpa velit est.
             status:
                 type: string
                 description: Status message.
-                example: Temporibus commodi.
+                example: Et numquam non rerum.
             version:
                 type: string
                 description: Service runtime version.
-                example: Repellendus reiciendis molestias.
+                example: Quis eius voluptas est ipsum.
         example:
-            service: Dolore nostrum animi omnis qui nihil.
-            status: Quibusdam rem voluptatum dolor provident dolorum nihil.
-            version: Eius culpa velit est.
+            service: Rerum exercitationem odit tempora ab in aliquid.
+            status: Deleniti odit dolor et et.
+            version: Libero sed a at.
         required:
             - service
             - status
@@ -465,53 +635,71 @@ definitions:
                     $ref: '#/definitions/PolicyResponseBody'
                 description: JSON array of policies.
                 example:
-                    - data: Similique architecto.
-                      dataConfig: Sunt ut est ut molestias.
-                      group: Error minus vel voluptate quasi.
-                      lastUpdate: 2308837710267791288
+                    - data: Ut quibusdam.
+                      dataConfig: Eaque fugiat et.
+                      group: Dolore ducimus accusamus et voluptatibus cupiditate.
+                      lastUpdate: 1036142546592891419
                       locked: true
-                      policyName: Vel dolores omnis molestiae tempora sed repellendus.
-                      rego: Vel sunt dolorem ea architecto iure.
-                      repository: Ut iure aut asperiores.
-                      version: Debitis consectetur.
-                    - data: Similique architecto.
-                      dataConfig: Sunt ut est ut molestias.
-                      group: Error minus vel voluptate quasi.
-                      lastUpdate: 2308837710267791288
+                      policyName: Quae et et unde.
+                      rego: Nisi vitae iure fugiat sed sit dolores.
+                      repository: Aperiam aut odio dolorum.
+                      version: Repellat inventore ut doloremque recusandae earum et.
+                    - data: Ut quibusdam.
+                      dataConfig: Eaque fugiat et.
+                      group: Dolore ducimus accusamus et voluptatibus cupiditate.
+                      lastUpdate: 1036142546592891419
                       locked: true
-                      policyName: Vel dolores omnis molestiae tempora sed repellendus.
-                      rego: Vel sunt dolorem ea architecto iure.
-                      repository: Ut iure aut asperiores.
-                      version: Debitis consectetur.
-                    - data: Similique architecto.
-                      dataConfig: Sunt ut est ut molestias.
-                      group: Error minus vel voluptate quasi.
-                      lastUpdate: 2308837710267791288
+                      policyName: Quae et et unde.
+                      rego: Nisi vitae iure fugiat sed sit dolores.
+                      repository: Aperiam aut odio dolorum.
+                      version: Repellat inventore ut doloremque recusandae earum et.
+                    - data: Ut quibusdam.
+                      dataConfig: Eaque fugiat et.
+                      group: Dolore ducimus accusamus et voluptatibus cupiditate.
+                      lastUpdate: 1036142546592891419
                       locked: true
-                      policyName: Vel dolores omnis molestiae tempora sed repellendus.
-                      rego: Vel sunt dolorem ea architecto iure.
-                      repository: Ut iure aut asperiores.
-                      version: Debitis consectetur.
+                      policyName: Quae et et unde.
+                      rego: Nisi vitae iure fugiat sed sit dolores.
+                      repository: Aperiam aut odio dolorum.
+                      version: Repellat inventore ut doloremque recusandae earum et.
+                    - data: Ut quibusdam.
+                      dataConfig: Eaque fugiat et.
+                      group: Dolore ducimus accusamus et voluptatibus cupiditate.
+                      lastUpdate: 1036142546592891419
+                      locked: true
+                      policyName: Quae et et unde.
+                      rego: Nisi vitae iure fugiat sed sit dolores.
+                      repository: Aperiam aut odio dolorum.
+                      version: Repellat inventore ut doloremque recusandae earum et.
         example:
             policies:
-                - data: Similique architecto.
-                  dataConfig: Sunt ut est ut molestias.
-                  group: Error minus vel voluptate quasi.
-                  lastUpdate: 2308837710267791288
+                - data: Ut quibusdam.
+                  dataConfig: Eaque fugiat et.
+                  group: Dolore ducimus accusamus et voluptatibus cupiditate.
+                  lastUpdate: 1036142546592891419
                   locked: true
-                  policyName: Vel dolores omnis molestiae tempora sed repellendus.
-                  rego: Vel sunt dolorem ea architecto iure.
-                  repository: Ut iure aut asperiores.
-                  version: Debitis consectetur.
-                - data: Similique architecto.
-                  dataConfig: Sunt ut est ut molestias.
-                  group: Error minus vel voluptate quasi.
-                  lastUpdate: 2308837710267791288
+                  policyName: Quae et et unde.
+                  rego: Nisi vitae iure fugiat sed sit dolores.
+                  repository: Aperiam aut odio dolorum.
+                  version: Repellat inventore ut doloremque recusandae earum et.
+                - data: Ut quibusdam.
+                  dataConfig: Eaque fugiat et.
+                  group: Dolore ducimus accusamus et voluptatibus cupiditate.
+                  lastUpdate: 1036142546592891419
                   locked: true
-                  policyName: Vel dolores omnis molestiae tempora sed repellendus.
-                  rego: Vel sunt dolorem ea architecto iure.
-                  repository: Ut iure aut asperiores.
-                  version: Debitis consectetur.
+                  policyName: Quae et et unde.
+                  rego: Nisi vitae iure fugiat sed sit dolores.
+                  repository: Aperiam aut odio dolorum.
+                  version: Repellat inventore ut doloremque recusandae earum et.
+                - data: Ut quibusdam.
+                  dataConfig: Eaque fugiat et.
+                  group: Dolore ducimus accusamus et voluptatibus cupiditate.
+                  lastUpdate: 1036142546592891419
+                  locked: true
+                  policyName: Quae et et unde.
+                  rego: Nisi vitae iure fugiat sed sit dolores.
+                  repository: Aperiam aut odio dolorum.
+                  version: Repellat inventore ut doloremque recusandae earum et.
         required:
             - policies
     PolicyResponseBody:
@@ -521,19 +709,19 @@ definitions:
             data:
                 type: string
                 description: Policy static data.
-                example: Ad omnis possimus.
+                example: Molestiae fugiat harum quia corporis ullam natus.
             dataConfig:
                 type: string
                 description: Policy static data optional configuration.
-                example: Cupiditate qui quo.
+                example: Animi omnis minima fuga numquam.
             group:
                 type: string
                 description: Policy group.
-                example: Dolorem aut accusantium.
+                example: Error et sunt maxime aperiam.
             lastUpdate:
                 type: integer
                 description: Last update (Unix timestamp).
-                example: 2438708265142731750
+                example: 4069214457015523206
                 format: int64
             locked:
                 type: boolean
@@ -542,29 +730,29 @@ definitions:
             policyName:
                 type: string
                 description: Policy name.
-                example: Sapiente laborum.
+                example: Dignissimos enim.
             rego:
                 type: string
                 description: Policy rego source code.
-                example: Voluptatem culpa voluptates sed ea.
+                example: Et exercitationem perspiciatis quidem accusamus.
             repository:
                 type: string
                 description: Policy repository.
-                example: Nobis iure rerum non.
+                example: Cupiditate qui quo.
             version:
                 type: string
                 description: Policy version.
-                example: Dolor culpa.
+                example: Et sit qui fugit enim labore.
         example:
-            data: Animi omnis minima fuga numquam.
-            dataConfig: Ipsum explicabo assumenda delectus.
-            group: Minima et exercitationem perspiciatis quidem accusamus maxime.
-            lastUpdate: 920933004706373110
-            locked: true
-            policyName: Aperiam harum et sit qui fugit enim.
-            rego: Ullam natus.
-            repository: Adipisci error et sunt.
-            version: Fugiat harum quia.
+            data: Consequatur aut ipsam.
+            dataConfig: Aut provident ducimus vero adipisci nemo.
+            group: Voluptas eos nemo.
+            lastUpdate: 5753045449869824649
+            locked: false
+            policyName: Dolores laborum.
+            rego: Facilis tempora dolor consectetur.
+            repository: Assumenda delectus et eius sed molestias rerum.
+            version: Vel eveniet voluptas rerum.
         required:
             - repository
             - group
@@ -579,17 +767,17 @@ definitions:
             subscriber:
                 type: string
                 description: Name of the subscriber for policy.
-                example: d5d
+                example: 4ur
                 minLength: 3
                 maxLength: 100
             webhook_url:
                 type: string
                 description: Subscriber webhook url.
-                example: http://shields.com/bradley
+                example: http://wisozk.info/jesus
                 format: uri
         example:
-            subscriber: vy5
-            webhook_url: http://runolfssoneffertz.net/karlee
+            subscriber: wox
+            webhook_url: http://kassulke.name/dexter
         required:
             - webhook_url
             - subscriber
